[gd_scene load_steps=21 format=3 uid="uid://bu1yxtiniie6s"]

[ext_resource type="Texture2D" uid="uid://chn6f3coifuua" path="res://Assets/AdventureBegins_DemoVersion/AdventureBegins_Demo.png" id="1_ni8ab"]
[ext_resource type="Texture2D" uid="uid://bec211ipem3lu" path="res://Assets/room/Adventurer Sprite Sheet v1.5.png" id="3_dcdhs"]
[ext_resource type="AudioStream" uid="uid://cyawcmyijevpe" path="res://Assets/audio/pew-pew-lame-sound-effect.mp3" id="4_w5p2r"]
[ext_resource type="Script" path="res://Scenes/shoot_sound_effect.gd" id="5_td0ta"]
[ext_resource type="Script" path="res://Scripts/end_player.gd" id="5_v2dj4"]
[ext_resource type="AudioStream" uid="uid://djew7i72asxir" path="res://Assets/audio/damage.mp3" id="6_ioecd"]
[ext_resource type="VideoStream" path="res://Assets/video/output.ogv" id="7_4jnle"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_22bkh"]
texture = ExtResource("1_ni8ab")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
0:11/0 = 0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:11/0 = 0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:11/0 = 0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:11/0 = 0
3:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:11/0 = 0
4:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
0:13/0 = 0
1:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
17:18/0 = 0
18:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
12:19/0 = 0
12:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:19/0 = 0
13:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:19/0 = 0
14:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
12:20/0 = 0
12:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:20/0 = 0
14:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
12:21/0 = 0
12:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:21/0 = 0
13:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:21/0 = 0
14:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
12:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
14:24/0 = 0
15:24/0 = 0
16:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
15:25/0 = 0
16:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
15:26/0 = 0
15:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:26/0 = 0
16:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:26/0 = 0
17:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
14:27/0 = 0
14:27/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:27/0 = 0
15:27/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:27/0 = 0
16:27/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:27/0 = 0
17:27/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:27/0 = 0
18:27/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
9:28/0 = 0
10:28/0 = 0
11:28/0 = 0
12:28/0 = 0
12:28/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:28/0 = 0
14:28/0 = 0
14:28/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:28/0 = 0
16:28/0 = 0
17:28/0 = 0
18:28/0 = 0
18:28/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
5:29/0 = 0
6:29/0 = 0
7:29/0 = 0
8:29/0 = 0
9:29/0 = 0
10:29/0 = 0
11:29/0 = 0
12:29/0 = 0
13:29/0 = 0
14:29/0 = 0
15:29/0 = 0
15:29/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:29/0 = 0
16:29/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:29/0 = 0
17:29/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
15:30/0 = 0
15:30/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:30/0 = 0
17:30/0 = 0
17:30/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_eydq5"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 6
sources/1 = SubResource("TileSetAtlasSource_22bkh")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jmba"]
size = Vector2(13, 24)

[sub_resource type="Animation" id="Animation_6v7j5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_sdcwe"]
resource_name = "die"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [91, 97]
}

[sub_resource type="Animation" id="Animation_tps5i"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 12]
}

[sub_resource type="Animation" id="Animation_usab2"]
resource_name = "powerup"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [130, 135]
}

[sub_resource type="Animation" id="Animation_ke0qr"]
resource_name = "shoot"

[sub_resource type="Animation" id="Animation_g8c6j"]
resource_name = "takeDamage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [182, 183, 184]
}

[sub_resource type="Animation" id="Animation_klg4u"]
resource_name = "walkHorizontal"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [13, 20]
}

[sub_resource type="Animation" id="Animation_kyltu"]
resource_name = "walkUp"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [143, 150]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iym4r"]
_data = {
"RESET": SubResource("Animation_6v7j5"),
"die": SubResource("Animation_sdcwe"),
"idle": SubResource("Animation_tps5i"),
"powerup": SubResource("Animation_usab2"),
"shoot": SubResource("Animation_ke0qr"),
"takeDamage": SubResource("Animation_g8c6j"),
"walkHorizontal": SubResource("Animation_klg4u"),
"walkUp": SubResource("Animation_kyltu")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14vfl"]
size = Vector2(10, 9.34581)

[node name="Room2" type="TileMap"]
position = Vector2(-315, 91)
scale = Vector2(5, 3.745)
tile_set = SubResource("TileSet_eydq5")
format = 2
layer_0/name = "Layer1"
layer_0/tile_data = PackedInt32Array(196618, 131073, 9, 262154, 131073, 9, 196619, 196609, 9, 262155, 196609, 9, 196620, 65537, 9, 262156, 65537, 9, 9, 65537, 8, 65545, 65537, 9, 131081, 65537, 9, 196617, 65537, 9, 262153, 65537, 9, 10, 131073, 8, 65546, 131073, 9, 131082, 131073, 9, 11, 196609, 8, 65547, 196609, 9, 131083, 196609, 9, 12, 65537, 8, 65548, 65537, 9, 131084, 65537, 9, 13, 131073, 8, 65549, 131073, 9, 131085, 131073, 9, 196621, 131073, 9, 262157, 131073, 9, 65541, 1, 9, 131077, 1, 10, 196613, 1, 9, 262149, 1, 10, 327685, 1, 9, 393221, 1, 10, 458757, 1, 9, 524293, 1, 11, 5, 786433, 28, 6, 65537, 8, 7, 131073, 8, 8, 196609, 8, 14, 196609, 8, 15, 65537, 8, 16, 131073, 8, 17, 196609, 8, 18, 786433, 28, 65554, 262145, 9, 131090, 262145, 10, 196626, 262145, 9, 262162, 262145, 10, 327698, 262145, 9, 393234, 262145, 10, 458770, 262145, 9, 524306, 262145, 11, 524294, 65537, 11, 524295, 131073, 11, 524296, 196609, 11, 524297, 65537, 11, 524298, 131073, 11, 524299, 196609, 11, 524300, 65537, 11, 524301, 131073, 11, 524303, 65537, 11, 524304, 131073, 11, 524305, 196609, 11, 65542, 65537, 9, 131078, 65537, 9, 65543, 131073, 9, 131079, 131073, 9, 65544, 196609, 9, 131080, 196609, 9, 65550, 196609, 9, 131086, 196609, 9, 65551, 65537, 9, 131087, 65537, 9, 65552, 131073, 9, 131088, 131073, 9, 65553, 196609, 9, 131089, 196609, 9, 196623, 65537, 9, 196624, 131073, 9, 196625, 196609, 9, 262159, 65537, 9, 262160, 131073, 9, 262161, 196609, 9, 327695, 65537, 9, 327696, 131073, 9, 327697, 196609, 9, 393231, 65537, 9, 393232, 131073, 9, 393233, 196609, 9, 458767, 65537, 9, 458768, 131073, 9, 458769, 196609, 9, 458764, 65537, 9, 458765, 131073, 9, 458761, 65537, 9, 458762, 131073, 9, 458763, 196609, 9, 458758, 65537, 9, 458759, 131073, 9, 458760, 196609, 9, 393222, 65537, 9, 393223, 131073, 9, 393224, 196609, 9, 327686, 65537, 9, 327687, 131073, 9, 327688, 196609, 9, 262150, 65537, 9, 262151, 131073, 9, 262152, 196609, 9, 196614, 65537, 9, 196615, 131073, 9, 196616, 196609, 9, 327689, 65537, 9, 327690, 131073, 9, 327691, 196609, 9, 393225, 65537, 9, 393226, 131073, 9, 393227, 196609, 9, 393228, 65537, 9, 393229, 131073, 9, 393230, 196609, 9, 327692, 65537, 9, 327693, 131073, 9, 327694, 196609, 9, 262158, 196609, 9, 196622, 196609, 9, -65532, 786433, 28, 4, 786433, 28, 65540, 786433, 28, 131076, 786433, 28, 196612, 786433, 28, 262148, 786433, 28, 327684, 786433, 28, 393220, 786433, 28, 458756, 786433, 28, 524292, 786433, 28, 589828, 786433, 28, 589829, 786433, 28, 589830, 786433, 28, 589831, 786433, 28, 589832, 786433, 28, 589833, 786433, 28, 589834, 786433, 28, 589835, 786433, 28, 589836, 786433, 28, 589837, 786433, 28, 589839, 786433, 28, 589840, 786433, 28, 589841, 786433, 28, 589842, 786433, 28, 589843, 786433, 28, 655364, 786433, 28, 655365, 786433, 28, 655366, 786433, 28, 655367, 786433, 28, 655368, 786433, 28, 655369, 786433, 28, 655370, 786433, 28, 655371, 786433, 28, 655372, 786433, 28, 655373, 786433, 28, 655375, 786433, 28, 655376, 786433, 28, 655377, 786433, 28, 655378, 786433, 28, 655379, 786433, 28, 524307, 786433, 28, 458771, 786433, 28, 393235, 786433, 28, 327699, 786433, 28, 262163, 786433, 28, 196627, 786433, 28, 131091, 786433, 28, 65555, 786433, 28, 19, 786433, 28, -65517, 786433, 28, -131053, 786433, 28, -131054, 786433, 28, -131055, 786433, 28, -131056, 786433, 28, -131057, 786433, 28, -131058, 786433, 28, -131059, 786433, 28, -131060, 786433, 28, -131061, 786433, 28, -131062, 786433, 28, -131063, 786433, 28, -131064, 786433, 28, -131065, 786433, 28, -131066, 786433, 28, -131067, 786433, 28, -131068, 786433, 28, -65531, 786433, 28, -65530, 786433, 28, -65529, 786433, 28, -65528, 786433, 28, -65527, 786433, 28, -65526, 786433, 28, -65525, 786433, 28, -65524, 786433, 28, -65523, 786433, 28, -65522, 786433, 28, -65521, 786433, 28, -65520, 786433, 28, -65519, 786433, 28, -65518, 786433, 28)
layer_1/name = "Layer2"
layer_1/tile_data = PackedInt32Array(65542, 917505, 27, 131078, 917505, 28, 7, 983041, 26, 65543, 983041, 29, 131079, 983041, 30, 8, 1048577, 26, 65544, 1048577, 29, 131080, 1048577, 30, 9, 1114113, 26, 65545, 1114113, 29, 131081, 1114113, 30, 65546, 1179649, 27, 131082, 1179649, 28, 5, 1, 8, 18, 262145, 8, 589837, 720897, 24, 655373, 720897, 25, 524302, 786433, 24, 589838, 786433, 24, 655374, 786433, 24, 589839, 851969, 24, 655375, 851969, 25, 262151, 589825, 1610612743, 196618, 589825, 805306375, 262156, 589825, 805306375, 262158, 589825, 805306375, 393231, 589825, 1610612743, 393224, 589825, 805306375, 458763, 851969, 21, 131083, 786433, 19, 131084, 851969, 19, 131085, 851969, 19, 131086, 851969, 19, 131087, 851969, 19, 131088, 851969, 19, 131089, 917505, 19, 196625, 917505, 20, 262161, 917505, 20, 327697, 917505, 20, 393233, 917505, 20, 458769, 917505, 21, 458768, 917505, 21, 458767, 917505, 21, 196614, 786433, 20, 262150, 786433, 20, 327686, 786433, 20, 393222, 786433, 20, 458758, 786433, 21, 458759, 851969, 21, 458760, 786433, 21, 458761, 851969, 21, 458762, 786433, 21, 458764, 786433, 21, 458765, 851969, 21, 458766, 786433, 24)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(136, 45.1268)
collision_layer = 4
collision_mask = 2
script = ExtResource("5_v2dj4")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(2.2, -5.8)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_dcdhs")
hframes = 13
vframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-0.399999, 0.534056)
scale = Vector2(0.808001, 1)
shape = SubResource("RectangleShape2D_1jmba")

[node name="SoundEffects" type="Node" parent="Player"]

[node name="Shoot" type="AudioStreamPlayer" parent="Player/SoundEffects"]
stream = ExtResource("4_w5p2r")
script = ExtResource("5_td0ta")

[node name="Damage" type="AudioStreamPlayer" parent="Player/SoundEffects"]
stream = ExtResource("6_ioecd")
script = ExtResource("5_td0ta")

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="Player/SoundEffects"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_iym4r")
}
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(231.6, 163.685)
scale = Vector2(1.408, 7.18276)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.199997, -0.267021)
shape = SubResource("RectangleShape2D_14vfl")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_left = 62.8
offset_top = -24.5661
offset_right = 1342.8
offset_bottom = 695.434
scale = Vector2(0.201048, 0.279034)
stream = ExtResource("7_4jnle")

[connection signal="finished" from="Player/SoundEffects/Shoot" to="Player/SoundEffects/Shoot" method="_on_finished"]
[connection signal="finished" from="Player/SoundEffects/Damage" to="Player/SoundEffects/Damage" method="_on_finished"]
[connection signal="animation_finished" from="Player/AnimationPlayer" to="Player" method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="Player" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="Player" method="_on_area_2d_body_exited"]
[connection signal="finished" from="VideoStreamPlayer" to="Player" method="_on_video_stream_player_finished"]
